fix phone number position in resume

--- a/static/cv.html
+++ b/static/cv.html
@@ -10,7 +10,7 @@
             <img class="photo" src = "/photoCV2.png" />
 
             <article>
-                <p> <img class="logo" src="/utilisateur.png" /> Aurélien Boissiere </p>
+                <p> <img class="logo" src="/utilisateur.png" /> Aurlien Boissiere </p>
                 <p> <img class="logo" src="/accueil.png"/> La chapelle sur Erdre </p>
                 <p> <img class="logo" src="/voiture.png"/> Permis B </p>
                 <p> <img class="logo" src="/date-danniversaire.png"/> 22 ans </p>
