--- a/static/resume.html
+++ b/static/resume.html
@@ -10,7 +10,7 @@
             <img class="photo" src = "/photoCV2.png" />
 
             <article>
-                <p> <img class="logo" src="/utilisateur.png" /> Aurélien Boissiere </p>
+                <p> <img class="logo" src="/utilisateur.png" /> Aurelien Boissiere </p>
                 <p> <img class="logo" src="/accueil.png"/> France </p>
                 <p> <img class="logo" src="/voiture.png"/> Driver's license </p>
                 <p> <img class="logo" src="/date-danniversaire.png"/> 22 years old </p>
