--- a/static/cv.html
+++ b/static/cv.html
@@ -13,7 +13,7 @@
                 <p> <img class="logo" src="/utilisateur.png" /> Aurlien Boissiere </p>
                 <p> <img class="logo" src="/accueil.png"/> La chapelle sur Erdre </p>
                 <p> <img class="logo" src="/voiture.png"/> Permis B </p>
-                <p> <img class="logo" src="/date-danniversaire.png"/> 22 ans </p>
+                <p> <img class="logo" src="/date-danniversaire.png"/> 23 ans </p>
             </article>
 
             <article>
@@ -84,9 +84,21 @@
             <section id="Experiences">
                 <h3 id="experienceTitle"> Expériences professionnelles et projets </h3>
                 <article>
+                    <h4> Article sur sûr l'ontology learning - LS2N </h4>
+                    <p> Etat de l'art et écriture d'un article sur l'OL </p>
+                    <p> Combinaison de modeles, LLM, few-shot learning </p>
+                </article>
+    
+                <article>
+                    <h4> Concours de programmation - Ludum Dare 53 </h4>
+                    <p> Developpement d'un jeu en 72h en C#</p>
+                    <p> Fini 907eme sur 5993 participants </p>
+                </article>
+
+                <article>
                     <h4> Developpeur FullStack - Soleneos </h4>
                     <p> Mise en place d'une application web d'apperçu de simulation </p>
-                    <p> Gestion de base de données </p>
+                    <p> Gestion de base de données, modelisation 3D, framework : Symfony </p>
                 </article>
 
                 <article>
@@ -94,17 +106,6 @@
                     <p> Mise en place d'un environnement d'intégration continue </p>
                     <p> Developpement d'une ébauche de site web </p>
                 </article>
-
-                <article>
-                    <h4> Football Trading Card Game</h4>
-                    <p> Jeu de cartes à échanger autours des joueurs de foot français </p>
-                    <p> Travail en équipe et Programmation Orienté Objet en Java </p>
-                </article>
-
-                <article>
-                    <h4> Concours de programmation - Ludum Dare 47 </h4>
-                    <p> 72h pour developper entièremment un jeu vidéo </p>
-                    <p> 1419eme place sur 3206 </p>
                 </article>
             </section>
         </main>
