--- a/static/resume.html
+++ b/static/resume.html
@@ -13,7 +13,7 @@
                 <p> <img class="logo" src="/utilisateur.png" /> Aurelien Boissiere </p>
                 <p> <img class="logo" src="/accueil.png"/> France </p>
                 <p> <img class="logo" src="/voiture.png"/> Driver's license </p>
-                <p> <img class="logo" src="/date-danniversaire.png"/> 22 years old </p>
+                <p> <img class="logo" src="/date-danniversaire.png"/> 23 years old </p>
             </article>
 
             <article>
@@ -84,27 +84,27 @@
         <section id="Experiences">
             <h3 id="experienceTitle"> Professional experiences and projects </h3>
             <article>
+                <h4> Paper on ontology learning - LS2N </h4>
+                <p> Researched and wrote a paper on model combination for OL </p>
+                <p> Used Few shot learning, LLM and semi-supervised learning </p>
+            </article>
+
+            <article>
+                <h4> Programming contest - Ludum Dare 53 </h4>
+                <p> Developped a game in 72h in C#</p>
+                <p> Finished 907th out of 5993 participants </p>
+            </article>
+
+            <article>
                 <h4> FullStack Developer - Soleneos </h4>
                 <p> Setting up a web application for simulation preview </p>
-                <p> Database management </p>
+                <p> Database management, 3D modelisation, Symfony framework </p>
             </article>
 
             <article>
                 <h4> DevOps and Web Developer - Unitix </h4>
                 <p> Setting up a continuous integration environment </p>
                 <p> Developing a rough draft of a website </p>
-            </article>
-
-            <article>
-                <h4> Football Trading Card Game</h4>
-                <p> Trading card game around French football players </p>
-                <p> Teamwork and Object-Oriented Programming in Java </p>
-            </article>
-
-            <article>
-                <h4> Programming contest - Ludum Dare 47 </h4>
-                <p> 72 hours to fully develop a video game </p>
-                <p> 1419th place out of 3206 </p>
             </article>
 
             </section>
