Add toefl certif

--- a/static/cv.html
+++ b/static/cv.html
@@ -52,8 +52,8 @@
         </aside>
 
         <main>
-            <h1> Etudiant ingénieur </h1>
-            <h2> cherche stage de fin d'études </h2>
+            <h1> Ingénieur FullStack </h1>
+            <h2> cherche CDI </h2>
 
             <section id="contact">
                 <p class="contact-info">07 81 38 83 26</p>
@@ -85,8 +85,9 @@
             <section id="Experiences">
                 <h3 id="experienceTitle"> Expériences professionnelles et projets </h3>
                 <article>
-                    <h4> Article sur sûr l'ontology learning - LS2N </h4>
-                    <p> Etat de l'art et écriture d'un article sur l'OL </p>
+                    <h4> Chercheur stagiaire - LS2N </h4>
+                    <p> Recherche et écriture d'un article sur la combinaison de modèle d'IA </p>
+                    <p> pour la création automatique d'ontologies </p>
                     <p> Combinaison de modeles, LLM, few-shot learning </p>
                 </article>
     
