Added skills icons

--- a/static/cv-fullstack.html
+++ b/static/cv-fullstack.html
@@ -11,7 +11,7 @@
             <img class="photo" src = "/photoCV2.png" />
 
             <article>
-                <p> <img class="logo" src="/utilisateur.png" /> Aurlien Boissiere </p>
+                <p> <img class="logo" src="/utilisateur.png" /> Aurélien Boissiere </p>
                 <p> <img class="logo" src="/accueil.png"/> La chapelle sur Erdre </p>
                 <p> <img class="logo" src="/voiture.png"/> Permis B </p>
                 <p> <img class="logo" src="/date-danniversaire.png"/> 23 ans </p>
@@ -39,8 +39,8 @@
                 <p class="bold"> Français </p>
                 <p> Langue maternelle</p>
                 <p class="bold"> Anglais </p>
+                <p> TOEFL : 104 / 120 (C1)</p>
                 <p> TOEIC : 920 / 990</p>
-                <p> TOEFL : 104 / 120</p>
             </article>
 
             <article>
