--- a/static/cv-fullstack.html
+++ b/static/cv-fullstack.html
@@ -52,7 +52,7 @@
         </aside>
 
         <main>
-            <h1> Ingénieur FullStack </h1>
+            <h1> Ingénieur FullStack dev</h1>
             <h2> cherche CDI </h2>
 
             <section id="contact">
