--- a/static/resume.html
+++ b/static/resume.html
@@ -39,8 +39,8 @@
                 <p class="bold"> French </p>
                 <p> Native speaker </p>
                 <p class="bold"> English </p>
-                <p> TOEIC : 920 / 990</p>
-                <p> TOEFL : 104 / 120</p>
+                <p> TOEFL : 104 / 120 (C1) </p>
+                <p> TOEIC : 920 / 990 </p>
             </article>
 
             <article>
@@ -52,8 +52,8 @@
         </aside>
 
         <main>
-            <h1> Engineering student </h1>
-            <h2> looking for end-of-studies internship </h2>
+            <h1> Junior dev </h1>
+            <h2> looking for FullStack position </h2>
 
             <section id="contact">
                 <p class="contact-info">+33 7 81 38 83 26</p>
