--- a/static/cv-fullstack.html
+++ b/static/cv-fullstack.html
@@ -30,6 +30,7 @@
                 <p> HTML / CSS </p>
                 <p> JavaScript / TypeScript</p>
                 <p> React </p>
+                <p> Java </p>
                 <p> PHP + Symfony </p>
                 <p> Machine Learning </p>
             </article>
