--- a/static/cv-fullstack.html
+++ b/static/cv-fullstack.html
@@ -73,7 +73,7 @@
                 <article>
                     <h4> Formation d'ingenieur informatique </h4>
                     <p> Polytech Nantes : 2020 - 2023 </p>
-                    <p> Cinquième année </p>
+                    <p> Dev web, Java, C++ </p>
                 </article>
 
                 <article>
