--- a/static/cv-fullstack.html
+++ b/static/cv-fullstack.html
@@ -62,29 +62,16 @@
                 <p class="contact-info">aurelienboissiere.fr</p>
             </section>
 
-            <section id="Formations">
-                <h3 id="formationsTitle"> Formations </h3>
-                <article>
-                    <h4> Semestre d'échange à Québec</h4>
-                    <p> Université Laval : Automne 2022 </p>
-                    <p> Apprentissage automatique / par renforcement, bio-informatique </p>
-                </article>
-
-                <article>
-                    <h4> Formation d'ingenieur informatique </h4>
-                    <p> Polytech Nantes : 2020 - 2023 </p>
-                    <p> Developpement web, Java, C++ </p>
-                </article>
-
-                <article>
-                    <h4> Parcours des écoles d'ingenieur Polytech </h4>
-                    <p> Polytech Nantes : 2018 - 2020 </p>
-                    <p> Formation généraliste : Mathématique, physique et informatique</p>
-                </article>
-            </section>
-
             <section id="Experiences">
                 <h3 id="experienceTitle"> Expériences professionnelles et projets </h3>
+
+                <article>
+                    <h4> Developpeur FullStack - Galadrim </h4>
+                    <p> Conception et developpement de solutions web et mobiles </p>
+                    <p> correspondant à des besoins clients </p>
+                    <p> Méthode agile, React / React native, NodeJS, Django, AWS </p>
+                </article>
+
                 <article>
                     <h4> Chercheur stagiaire - LS2N </h4>
                     <p> Recherche et écriture d'un article sur la combinaison de modèle d'IA </p>
@@ -109,8 +96,29 @@
                     <p> Mise en place d'un environnement d'intégration continue </p>
                     <p> Developpement d'une ébauche de site web </p>
                 </article>
+            </section>
+
+            <section id="Formations">
+                <h3 id="formationsTitle"> Formations </h3>
+                <article>
+                    <h4> Semestre d'échange à Québec</h4>
+                    <p> Université Laval : Automne 2022 </p>
+                    <p> Apprentissage automatique / par renforcement, bio-informatique </p>
+                </article>
+
+                <article>
+                    <h4> Formation d'ingenieur informatique </h4>
+                    <p> Polytech Nantes : 2020 - 2023 </p>
+                    <p> Developpement web, Java, C++ </p>
+                </article>
+
+                <article>
+                    <h4> Parcours des écoles d'ingenieur Polytech </h4>
+                    <p> Polytech Nantes : 2018 - 2020 </p>
+                    <p> Formation généraliste : Mathématique, physique et informatique</p>
                 </article>
             </section>
+
         </main>
     </body>
 </html>
