--- a/static/cv-fullstack.html
+++ b/static/cv-fullstack.html
@@ -68,7 +68,7 @@
                 <article>
                     <h4> Developpeur FullStack - Galadrim </h4>
                     <p> Conception et developpement de solutions web et mobiles </p>
-                    <p> correspondant à des besoins clients </p>
+                    <p> sous supervision directe des clients. </p>
                     <p> Méthode agile, React / React native, NodeJS, Django, AWS </p>
                 </article>
 
