--- a/static/cv-fullstack.html
+++ b/static/cv-fullstack.html
@@ -14,7 +14,7 @@
                 <p> <img class="logo" src="/utilisateur.png" /> Aurélien Boissiere </p>
                 <p> <img class="logo" src="/accueil.png"/> La chapelle sur Erdre </p>
                 <p> <img class="logo" src="/voiture.png"/> Permis B </p>
-                <p> <img class="logo" src="/date-danniversaire.png"/> 23 ans </p>
+                <p> <img class="logo" src="/date-danniversaire.png"/> 24 ans </p>
             </article>
 
             <article>
@@ -27,9 +27,9 @@
 
             <article>
                 <h5> Compétences </h5>
-                <p> HTML / CSS </p>
-                <p> JavaScript / TypeScript</p>
-                <p> React </p>
+                <p> React / React Native </p>
+                <p> NodeJS </p>
+                <p> AWS </p>
                 <p> Java </p>
                 <p> PHP + Symfony </p>
                 <p> Machine Learning </p>
