--- a/static/cv-fullstack.html
+++ b/static/cv-fullstack.html
@@ -12,9 +12,19 @@
 
             <article>
                 <p> <img class="logo" src="/utilisateur.png" /> Aurélien Boissiere </p>
-                <p> <img class="logo" src="/accueil.png"/> La chapelle sur Erdre </p>
+                <p> <img class="logo" src="/accueil.png"/> Nantes </p>
                 <p> <img class="logo" src="/voiture.png"/> Permis B </p>
                 <p> <img class="logo" src="/date-danniversaire.png"/> 24 ans </p>
+            </article>
+
+            <article>
+                <h5> Compétences </h5>
+                <p> React / React Native </p>
+                <p> C# </p>
+                <p> AWS </p>
+                <p> NodeJS </p>
+                <p> Java </p>
+                <p> Machine Learning </p>
             </article>
 
             <article>
@@ -23,16 +33,6 @@
                 <p> Adaptabilité </p>
                 <p> Travail en équipe </p>
                 <p> Empathie </p>
-            </article>
-
-            <article>
-                <h5> Compétences </h5>
-                <p> React / React Native </p>
-                <p> NodeJS </p>
-                <p> AWS </p>
-                <p> Java </p>
-                <p> PHP + Symfony </p>
-                <p> Machine Learning </p>
             </article>
 
             <article>
